--- a/Plugin.AudioRecorder/Plugin.AudioRecorder.csproj
+++ b/Plugin.AudioRecorder/Plugin.AudioRecorder.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.5-dev.1" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
-
   <Import Project="..\Plugin.AudioRecorder.Shared\Plugin.AudioRecorder.Shared.projitems" Label="Shared" />
 </Project>
