--- a/Samples/Forms/AudioRecord.Forms.iOS/AudioRecord.Forms.iOS.csproj
+++ b/Samples/Forms/AudioRecord.Forms.iOS/AudioRecord.Forms.iOS.csproj
@@ -167,11 +167,16 @@
       <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="NuGet.Build.Packaging">
+      <Version>0.2.5-dev.8</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\AudioRecord.Forms\AudioRecord.Forms.csproj">
-      <Project>{64696B44-CFA0-4320-B53F-CD539D3BA5AE}</Project>
+      <Project>{74BD10E3-1652-45C3-B16F-A6FFDD0D2AB5}</Project>
       <Name>AudioRecord.Forms</Name>
     </ProjectReference>
   </ItemGroup>
